// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetContactAttribComp render helpers getFieldNameMarkup should return emphasized field name 1`] = `
<span
  className="emph"
>
  Age
</span>
`;

exports[`SetContactAttribComp render helpers getFieldNameMarkup should return emphasized property 1`] = `
<span
  className="emph"
>
  Email
</span>
`;

exports[`SetContactAttribComp render should render with 'clear...' div when value prop isn't passed 1`] = `
<div>
  Clear value for 
  <span
    className="emph"
  >
    Email
  </span>
</div>
`;

exports[`SetContactAttribComp render should render with 'update...' div when value prop passed 1`] = `
<div>
  Update 
  <span
    className="emph"
  >
    Email
  </span>
   to 
  <span
    className="emph"
  >
    jane@example.com
  </span>
</div>
`;
